@@ -161,11 +161,13 @@ target/release/tackler \
 
 ----
 Git Storage
-         commit : cb56fdcdd2b56d41fc08cc5af4a3b410896f03b5
       reference : txns-1E5
       directory : txns
-         suffix : .txn
-        message : txns-1E5: 2016/12
+      extension : txn
+         commit : cb56fdcdd2b56d41fc08cc5af4a3b410896f03b5
+         author : tackler <accounting@example.com>
+           date : 2019-03-18 21:05:38 +0200
+        subject : txns-1E5: 2016/12
 
 Txn Set Checksum
         SHA-256 : 27060dc1ebde35bebd8f7af2fd9815bc9949558d3e3c85919813cd80748c99a7
